# git-submodules-wrapper

./: .pylintrc  AUTHORS  LICENSE  README.md  azure-pipelines.yml  requirements.test.txt  requirements.txt  setup.cfg  tox.ini
azure-pipelines/: python-job.template.yml  python-steps.template.yml
git_submodules_wrapper/: __init__.py  __main__.py  cli.py
tests/: environment.py  list_submodules.feature
tests/steps/: list_submodules.py
