[metadata]
name = git-submodules-wrapper
author = Kevin Roy
author-email = kiniou@gmail.com
summary = wrapper for git submodules
description-file = README.md
home-page = https://github.com/kiniou/git-submodules-wrapper
license = WTFPL
classifier =
keywords = git submodule wrapper

[files]
packages =
  git_submodules_wrapper

[entry_points]
console_scripts =
  git-sm = git_submodules_wrapper:cli.main

[pbr]
skip_changelog = true
