[metadata]
name = git-submodules-wrapper
author = Kevin Roy
author-email = kiniou@gmail.com
summary = wrapper for git submodules
description-file = README.md
home-page = https://github.com/kiniou/git-submodules-wrapper
license = WTFPL
classifier =
  Development Status :: 1 - Planning
  Topic :: Software Development :: Version Control :: Git
keywords = git submodule wrapper upstream

[files]
packages =
  git_submodules_wrapper

[entry_points]
console_scripts =
  git-sm = git_submodules_wrapper:main

[pbr]
skip_changelog = true
